[gd_scene load_steps=48 format=2]

[ext_resource path="res://scenes/game/level/level_types/BombLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/editor/Canvas.gd" type="Script" id=2]
[ext_resource path="res://scenes/editor/Editor.gd" type="Script" id=3]
[ext_resource path="res://scenes/editor/buttons/TileButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/editor/CameraHolder.gd" type="Script" id=5]
[ext_resource path="res://scenes/editor/buttons/EntityButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sprites/editor/buttons.png" type="Texture" id=7]
[ext_resource path="res://scenes/game/world/entity/entities/enemy/boom_crawler/BoomCrawler.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/editor/buttons/ToolButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/editor/tool/PencilTool.gd" type="Script" id=10]
[ext_resource path="res://scenes/editor/tool/MoveTool.gd" type="Script" id=11]
[ext_resource path="res://scenes/game/world/entity/entities/enemy/brute/Brute.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/game/world/entity/entities/enemy/rush_rogue/RushRogue.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/game/world/entity/entities/enemy/rodder/Rodder.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/game/world/structure/destructible/ChainedExplosiveBarrel.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/game/world/environment/hazards/MovingSpikeHazard.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/game/world/environment/hazards/SpikeHazard.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/game/world/structure/destructible/ChainedCrate.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/game/world/structure/destructible/Crate.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/game/world/structure/destructible/BlasterCrate.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/game/world/structure/destructible/SwordCrate.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/game/world/entity/entities/item/collectible_items/FloatingScrap.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/game/world/entity/entities/item/collectible_items/SuperScrap.tscn" type="PackedScene" id=23]
[ext_resource path="res://scenes/game/world/structure/speed_pipe/SpeedBlock.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/game/world/structure/speed_pipe/SpeedPipeArea.tscn" type="PackedScene" id=25]
[ext_resource path="res://scenes/game/world/environment/LaunchPad.tscn" type="PackedScene" id=26]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 48, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 0, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 16, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 32, 64, 16, 16 )

[sub_resource type="ButtonGroup" id=18]

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 7 )
region = Rect2( 16, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 24, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 8, 16, 8, 8 )

[node name="Editor" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Canvas" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_right = 240.0
margin_bottom = 144.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" parent="Canvas" instance=ExtResource( 1 )]

[node name="CameraHolder" type="Node2D" parent="Canvas"]
position = Vector2( 90, 0 )
script = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="Canvas/CameraHolder"]
current = true
limit_left = 0
limit_top = 0
limit_bottom = 144
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="MenuLayer" type="CanvasLayer" parent="."]

[node name="Entities" type="Panel" parent="MenuLayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -176.0
margin_top = 30.0
margin_right = -16.0
margin_bottom = 102.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EntitiesGrid" type="GridContainer" parent="MenuLayer/Entities"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -20.0
margin_right = 64.0
margin_bottom = 20.0
custom_constants/hseparation = 0
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EntityButton" parent="MenuLayer/Entities/EntitiesGrid" instance=ExtResource( 6 )]
__icon = SubResource( 2 )
__entity = ExtResource( 8 )

[node name="EntityButton2" parent="MenuLayer/Entities/EntitiesGrid" instance=ExtResource( 6 )]
margin_left = 16.0
margin_right = 32.0
__icon = SubResource( 3 )
__entity = ExtResource( 12 )

[node name="EntityButton3" parent="MenuLayer/Entities/EntitiesGrid" instance=ExtResource( 6 )]
margin_left = 32.0
margin_right = 48.0
__icon = SubResource( 4 )
__entity = ExtResource( 14 )

[node name="EntityButton4" parent="MenuLayer/Entities/EntitiesGrid" instance=ExtResource( 6 )]
margin_left = 48.0
margin_right = 64.0
__icon = SubResource( 5 )
__entity = ExtResource( 13 )

[node name="EntityButton5" parent="MenuLayer/Entities/EntitiesGrid" instance=ExtResource( 6 )]
margin_left = 64.0
margin_right = 80.0
__icon = SubResource( 6 )
__entity = ExtResource( 15 )

[node name="EntityButton6" parent="MenuLayer/Entities/EntitiesGrid" instance=ExtResource( 6 )]
margin_left = 80.0
margin_right = 96.0
__icon = SubResource( 7 )
__entity = ExtResource( 16 )

[node name="EntityButton7" parent="MenuLayer/Entities/EntitiesGrid" instance=ExtResource( 6 )]
margin_left = 96.0
margin_right = 112.0
__icon = SubResource( 8 )
__entity = ExtResource( 17 )

[node name="EntityButton8" parent="MenuLayer/Entities/EntitiesGrid" instance=ExtResource( 6 )]
margin_left = 112.0
margin_right = 128.0
__icon = SubResource( 9 )
__entity = ExtResource( 18 )

[node name="EntityButton9" parent="MenuLayer/Entities/EntitiesGrid" instance=ExtResource( 6 )]
margin_top = 20.0
margin_bottom = 36.0
__icon = SubResource( 10 )
__entity = ExtResource( 19 )

[node name="EntityButton10" parent="MenuLayer/Entities/EntitiesGrid" instance=ExtResource( 6 )]
margin_left = 16.0
margin_top = 20.0
margin_right = 32.0
margin_bottom = 36.0
__icon = SubResource( 11 )
__entity = ExtResource( 20 )

[node name="EntityButton11" parent="MenuLayer/Entities/EntitiesGrid" instance=ExtResource( 6 )]
margin_left = 32.0
margin_top = 20.0
margin_right = 48.0
margin_bottom = 36.0
__icon = SubResource( 12 )
__entity = ExtResource( 21 )

[node name="EntityButton12" parent="MenuLayer/Entities/EntitiesGrid" instance=ExtResource( 6 )]
margin_left = 48.0
margin_top = 20.0
margin_right = 64.0
margin_bottom = 36.0
__icon = SubResource( 13 )
__entity = ExtResource( 22 )

[node name="EntityButton13" parent="MenuLayer/Entities/EntitiesGrid" instance=ExtResource( 6 )]
margin_left = 64.0
margin_top = 20.0
margin_right = 80.0
margin_bottom = 36.0
__icon = SubResource( 14 )
__entity = ExtResource( 23 )

[node name="EntityButton14" parent="MenuLayer/Entities/EntitiesGrid" instance=ExtResource( 6 )]
margin_left = 80.0
margin_top = 20.0
margin_right = 96.0
margin_bottom = 36.0
__icon = SubResource( 15 )
__entity = ExtResource( 25 )

[node name="EntityButton15" parent="MenuLayer/Entities/EntitiesGrid" instance=ExtResource( 6 )]
margin_left = 96.0
margin_top = 20.0
margin_right = 112.0
margin_bottom = 36.0
__icon = SubResource( 16 )
__entity = ExtResource( 24 )

[node name="EntityButton16" parent="MenuLayer/Entities/EntitiesGrid" instance=ExtResource( 6 )]
margin_left = 112.0
margin_top = 20.0
margin_right = 128.0
margin_bottom = 36.0
__icon = SubResource( 17 )
__entity = ExtResource( 26 )

[node name="Tools" type="Panel" parent="MenuLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -152.0
margin_top = 160.0
margin_right = 56.0
margin_bottom = 232.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MenuLayer/Tools"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -4.0
margin_right = 16.0
margin_bottom = 4.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolButton" parent="MenuLayer/Tools/HBoxContainer" instance=ExtResource( 9 )]
toggle_mode = true
group = SubResource( 18 )
texture_normal = SubResource( 19 )
__tool = ExtResource( 10 )

[node name="ToolButton2" parent="MenuLayer/Tools/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 12.0
margin_right = 20.0
toggle_mode = true
group = SubResource( 18 )
texture_normal = SubResource( 20 )
__tool = ExtResource( 11 )

[node name="SaveButton" parent="MenuLayer/Tools/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 24.0
margin_right = 32.0
group = SubResource( 18 )
texture_normal = SubResource( 21 )

[node name="Tiles" type="Panel" parent="MenuLayer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = 30.0
margin_right = 80.0
margin_bottom = 102.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileGrid" type="GridContainer" parent="MenuLayer/Tiles"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -28.0
margin_right = 20.0
margin_bottom = 12.0
rect_clip_content = true
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileButton" parent="MenuLayer/Tiles/TileGrid" instance=ExtResource( 4 )]
__type = 1

[node name="TileButton2" parent="MenuLayer/Tiles/TileGrid" instance=ExtResource( 4 )]
margin_left = 16.0
margin_right = 24.0
__type = 0

[node name="TileButton3" parent="MenuLayer/Tiles/TileGrid" instance=ExtResource( 4 )]
margin_left = 32.0
margin_right = 40.0
__type = 3

[node name="TileButton4" parent="MenuLayer/Tiles/TileGrid" instance=ExtResource( 4 )]
margin_top = 16.0
margin_bottom = 24.0
__type = 5

[node name="TileButton5" parent="MenuLayer/Tiles/TileGrid" instance=ExtResource( 4 )]
margin_left = 16.0
margin_top = 16.0
margin_right = 24.0
margin_bottom = 24.0
__type = 6

[node name="TileButton6" parent="MenuLayer/Tiles/TileGrid" instance=ExtResource( 4 )]
margin_left = 32.0
margin_top = 16.0
margin_right = 40.0
margin_bottom = 24.0
__type = 7

[node name="TileButton7" parent="MenuLayer/Tiles/TileGrid" instance=ExtResource( 4 )]
margin_top = 32.0
margin_bottom = 40.0
__type = 8

[node name="FileDialog" type="FileDialog" parent="MenuLayer"]
margin_left = 8.0
margin_top = 32.0
margin_right = 472.0
margin_bottom = 248.0
resizable = true
current_dir = "res://scenes/game/level/levels"
current_file = "FactoryLevelTest.tscn"
current_path = "res://scenes/game/level/levels/FactoryLevelTest.tscn"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MenuLayer/Tools/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
